tests/baselines/reference/redeclareParameterInCatchBlock.errors.txt
tests/cases/compiler/redeclareParameterInCatchBlock.ts(5,11): error TS2492: Cannot redeclare identifier 'e' in catch clause
tests/cases/compiler/redeclareParameterInCatchBlock.ts(11,9): error TS2492: Cannot redeclare identifier 'e' in catch clause


==== tests/cases/compiler/redeclareParameterInCatchBlock.ts (2 errors) ====
    
    try {
    
    } catch(e) {
        const e = null;
              ~
!!! error TS2492: Cannot redeclare identifier 'e' in catch clause
    }
    
    try {
    
    } catch(e) {
        let e;
            ~
!!! error TS2492: Cannot redeclare identifier 'e' in catch clause
    }
    
    try {
    
    } catch(e) {
        function test() {
            let e;
        }
    }
    
    